--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
