refact: manage packages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "start:js": "nodemon dist/index.js",
     "start": "concurrently npm:start:*",
     "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix"
+    "lint-fix": "eslint . --ext .ts --fix",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
